--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -5,6 +5,7 @@
 }
 
 html, body {
+	background-color: #efefef;
 	margin: 0px 0px 0px 0px;
 	padding: 0px 0px 0px 0px;
 }
@@ -42,29 +43,6 @@ p.spacer {
 	width: 716px;
 }
 
-#pager {
-	position: absolute;
-	top: 503px;
-	left: 340px;
-}
-
-#pager a {
-	background-image: url(../images/pager.png);
-	height: 14px;
-	width: 14px;
-	display: block;
-	float: left;
-	margin-left: 1px;
-}
-
-#pager a.activeSlide {
-	background-image: url(../images/pager-active.png);
-}
-
-#pager a span {
-	display: none;
-}
-
 #iphone #iphone-screens {
 	height: 300px;
 	left: 118px;
@@ -72,37 +50,32 @@ p.spacer {
 	width: 480px;
 	position: absolute;
 }
+
 #iphone #iphone-screens .iphone-screen {
+	height: 300px;
+	width: 480px;
 }
 
-#left {
-	background-image: url(../images/left.png);
-	cursor: pointer;
-	height: 16px;
-	left: 115px;
-	position: absolute;
-	top: 311px;
-	width: 16px;
-	z-index: 1002;
-}
-
-#right {
-	background-image: url(../images/right.png);
-	cursor: pointer;
-	height: 16px;
-	left: 635px;
-	position: absolute;
-	top: 311px;
-	width: 16px;
-	z-index: 1003;
-}
-
-#contact {
+.announcement {
 	color: #ffffff;
-	left: 40px;
-	position: absolute;
-	top: 140px;
-	width: 660px;
+	font-size: 42px;
+	font-weight: bold;
+	margin: -48px 0px 0px 0px;
+	position: relative;
+	text-align: center;
+	text-shadow: -2px -2px 1px #000,
+	             2px -2px 1px #000,
+	             -2px 2px 1px #000,
+	             2px 2px 1px #000,
+	             -5px -5px 10px rgba(0, 0, 0, 0.5),
+	             5px -5px 10px rgba(0, 0, 0, 0.5),
+	             -5px 5px 10px rgba(0, 0, 0, 0.5),
+	             5px 5px 10px rgba(0, 0, 0, 0.5);
+	top: -50%;
+	transform: rotate(-15deg);
+	-webkit-transform: rotate(-15deg);
+	white-space: nowrap;
+	width: 100%;
 }
 
 #detail {
@@ -116,68 +89,16 @@ p.spacer {
 
 #description {
 	background-color: #ffff66;
-	height: 114px;
+	display: block;
 	font-size: 20px;
+	height: 114px;
+	left: 0px;
+	opacity: 1;
 	padding-top: 16px;
-	width: 545px;
-}
-
-.reviews {
-	background-color: #ffff66;
-	height: 122px;
-	padding-top: 12px;
-	width: 545px;
-}
-
-.reviews .review {
-	float: left;
-	font-size: 16px;
-}
-
-.reviews .review-0, .reviews .review-3, .reviews .review-6 {
-	margin-right: 20px;
-}
-
-.reviews .review-1, .reviews .review-4, .reviews .review-7 {
-	margin-right: 20px;
-}
-
-.reviews .review-2, .reviews .review-5, .reviews .review-8 {
-}
-
-.byline {
-	font-style: italic;
-	font-size: 14px;
-	margin-top: 10px;
-}
-
-.star {
-	background-image: url(../images/star.png);
-	height: 14px;
-	float: left;
-	width: 14px;
-}
-
-#up {
-	background-image: url(../images/up.png);
-	bottom: 155px;
-	cursor: pointer;
-	height: 14px;
-	left: 5px;
 	position: absolute;
-	width: 14px;
-	z-index: 1000;
-}
-
-#down {
-	background-image: url(../images/down.png);
-	bottom: 49px;
-	cursor: pointer;
-	height: 14px;
-	left: 5px;
-	position: absolute;
-	width: 14px;
-	z-index: 1001;
+	top: 0px;
+	width: 545px;
+	z-index: 2;
 }
 
 #badge {
@@ -196,21 +117,12 @@ p.spacer {
 	width: 890px;
 }
 
-#home, #support, #facebook, #facebook-like {
+#github {
 	float: left;
 	margin-right: 5px;
-	width: 120px;
 }
 
-#home, #support {
-	width: 100px;
-}
-
-#facebook, #facebook-like {
-	width: 120px;
-}
-
-#home a, #support a, #facebook a {
+#github a {
 	color: #ffffff;
 	font-size: 20px;
 	font-weight: bold;
