--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -32,14 +32,20 @@ body {
 }
 
 .background-image {
-    background-size: 100% 100%;
+    background-color: transparent;
     background-position: 50% 50%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    color: transparent;
     display: block;
+    text-shadow: none;
+    vertical-align: middle;
 }
 
 #main {
     position: relative;
     height: 24em;
+    z-index: 1;
 }
 
 #main,
@@ -145,8 +151,8 @@ body {
 
 .ie #iphone {
     background-image: none;
-    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader( src='images/iphone.png', sizingMethod='scale' );
     -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader( src='images/iphone.png', sizingMethod='scale' )";
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader( src='images/iphone.png', sizingMethod='scale' );
 }
 
 #iphone #screens,
@@ -242,12 +248,6 @@ only screen and (min-resolution:2dppx) {
     display: block;
 }
 
-/* in case script does not load */
-.cycle-slideshow .screen:first-child {
-    position: static;
-    z-index: 200;
-}
-
 /* pager */
 .cycle-pager {
     width: 100%;
@@ -314,8 +314,8 @@ only screen and (min-resolution:2dppx) {
 
 .ie #badge {
     background-image: none;
-    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader( src='images/appstore-badge.png', sizingMethod='scale' );
     -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader( src='images/appstore-badge.png', sizingMethod='scale' )";
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader( src='images/appstore-badge.png', sizingMethod='scale' );
 }
 
 @media
