--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -4,14 +4,14 @@ html,
 body {
     font-family: "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
     min-height: 100%;
-    width: 100%;
+    /*width: 100%;*/
     margin: 0;
     padding: 0;
     color: #ffffff;
 }
 
 html {
-    overflow: auto;
+    /*overflow: auto;*/
 
     background: #ba9800; /* Old browsers */
     background: -moz-linear-gradient(top,  #e5d600 0%, #ba9800 100%); /* FF3.6+ */
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .clear {
@@ -44,28 +44,35 @@ body {
 
 #main {
     position: relative;
-    height: 24em;
+    height: 658px;
     z-index: 1;
+    overflow: hidden;
 }
 
 #main,
 #detail,
 #footer {
-    width: 35.5em;
+    width: 1014px;
     max-width: 1014px;
     margin: 0 auto 0 auto;
+}
+
+#stripe {
+    background-color: #ffff66;
+    width: 100%;
+    min-width: 1014px;
 }
 
 #question-mark,
 #question-mark-shadow {
     position: absolute;
-    top: -3.5em;
-    left: 21em;
+    top: -96px;
+    left: 586px;
 }
 
 #question-mark span,
 #question-mark-shadow span {
-    font-size: 30em;
+    font-size: 786px;
     font-weight: bold;
     line-height: 1em;
     height: 1em;
@@ -77,11 +84,10 @@ body {
 
 #question-mark-shadow {
     z-index: -2;
-    margin: 2px 0 0 2px;
 }
 
 #question-mark span {
-    text-shadow: 0 0 0.05em #b09000, 0 0 0.1em #b09000;
+    text-shadow: 0 0 0.025em #b09000;
 }
 
 #question-mark-shadow span {
@@ -91,8 +97,8 @@ body {
 #title,
 #title-shadow {
     position: absolute;
-    top: 1.5em;
-    left: 0.75em;
+    top: 41px;
+    left: 21px;
 }
 
 #title {
@@ -107,18 +113,18 @@ body {
 
 #title h1,
 #title-shadow h1 {
-    font-size: 3.375em;
+    font-size: 93px;
     font-weight: bold;
 }
 
 #title h1 {
-    text-shadow: 0 0 0.1em #b09000, 0 0 0.2em #b09000;
+    text-shadow: 0 0 3px #b09000, 0 0 6px #b09000;
 }
 
 #title h2,
 #title-shadow h2 {
-    font-size: 1.6875em;
-    margin: -0.375em 0 0 0.5em;
+    font-size: 46px;
+    margin: -10px 0 0 14px;
 }
 
 #title h2 {
@@ -129,11 +135,11 @@ body {
     background-image: url(images/iphone.png);
 
     position: absolute;
-    top: 9em;
-    left: 0.25em;
+    top: 247px;
+    left: 7px;
 
-    height: 13.414em;
-    width: 26.1em;
+    height: 368px;
+    width: 716px;
     max-height: 368px;
     max-width: 716px;
 
@@ -142,9 +148,9 @@ body {
 
 #pager-container {
     position: absolute;
-    top: 22em;
-    left: 0.25em;
-    width: 26.1em;
+    top: 604px;
+    left: 7px;
+    width: 716px;
     z-index: 500;
     text-align: center;
 }
@@ -159,15 +165,15 @@ body {
 #iphone #screens .screen,
 #iphone #screens .screen img {
     position: absolute;
-    height: 11.64em; /*320px;*/
-    width: 17.47em; /*480px;*/
+    height: 320px;
+    width: 480px;
     max-width: 480px;
     max-height: 320px;
 }
 
 #iphone #screens {
-    left: 4.3014em; /*118px;*/
-    top: 0.87486em; /*24px;*/
+    left: 118px;
+    top: 24px;
 }
 
 #iphone #screens .screen,
@@ -184,9 +190,9 @@ body {
     bottom: -1px;
     background-color: #000000;
     color: #ffffff;
-    padding: 0.5em 0 0.5em 0.5em;
+    padding: 14px 0 14px 14px;
     text-align: left;
-    font-size: 1.1em;
+    font-size: 30px;
 
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=66)"; /* IE 8 */
     filter: alpha(opacity=66); /* IE 5-7 */
@@ -256,8 +262,8 @@ only screen and (min-resolution:2dppx) {
 
 .cycle-pager span {
     font-family: arial;
-    font-size: 2em;
-    width: 0.5em;
+    font-size: 55px;
+    width: 27px;
     display: inline-block;
     /*color: #ffffff;*/
     color: #997e00;
@@ -277,38 +283,29 @@ only screen and (min-resolution:2dppx) {
     filter: alpha(opacity=50);
 }
 
-#stripe {
-    background-color: #ffff66;
-    width: 100%;
-}
-
 #detail {
     position: relative;
     /*color: #503800;*/
     /*color: #997e00;*/
     color: #745a00;
     z-index: 50;
-
-    /*height: 6.0075 - 0.5 - 0.5 = 5.0075em;*/
 }
 
 #description {
-    font-size: 0.75em;
-    left: 2em;
+    font-size: 22px;
+    left: 20px;
     position: absolute;
-    /*height: 5.0075 * 0.75 = 3.755625em;*/
-    /*top: (5.0075 - 3.755625) / 2 = 0.6259375em;*/
-    top: 0.6259375em;
+    top: 17px;
 }
 
 #badge {
     float: right;
     position:relative;
-    margin: -0.5em 1.5em -0.5em 0;
+    margin: -14px 80px -14px 0;
     z-index: 100;
 
-    height: 6.0075em;
-    width: 8.1em;
+    height: 178px;
+    width: 240px;
     background-image: url(images/appstore-badge.png);
 }
 
@@ -333,13 +330,13 @@ only screen and (min-resolution:2dppx) {
 }
 
 #footer {
-    padding: 1em 0 1.5em 0;
+    padding: 27px 0 41px 0;
 }
 
 #download {
     float: left;
-    font-size: 1em;
-    padding-left: 1.5em;
+    font-size: 27px;
+    padding-left: 41px;
 }
 
 #download a {
@@ -347,8 +344,8 @@ only screen and (min-resolution:2dppx) {
 }
 
 #legal {
-    font-size: 0.5em;
+    font-size: 14px;
     float: right;
-    margin-right: 3em;
+    margin-right: 82px;
     text-align: right;
 }
