Add link to robruana.com

--- a/_includes/css/style.scss
+++ b/_includes/css/style.scss
@@ -294,14 +294,14 @@ only screen and (min-resolution:2dppx) {
     padding: 40px 0 40px 0;
 }
 
+#footer a {
+    color: #ff0;
+}
+
 #download {
     float: left;
     font-size: 27px;
     padding-left: 20px;
-}
-
-#download a {
-    color: #ff0;
 }
 
 #legal {
